--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,11 @@ dist.jar=${dist.dir}/Pacman.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1.jar=C:\\Users\\YannisBurkhalter\\Downloads\\json-simple-1.1.1.jar
+file.reference.json-20180813.jar=lib/json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-20180813.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
