All AI works (no scatter for moment)

--- a/pacman/pacman.csproj
+++ b/pacman/pacman.csproj
@@ -69,12 +69,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Blinky.cs" />
+    <Compile Include="Clyde.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Drawable.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Ghost.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="Inky.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MyCanvas.cs" />
+    <Compile Include="Pinky.cs" />
     <Compile Include="Tile.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
